--- a/.evg.yml
+++ b/.evg.yml
@@ -4,21 +4,7 @@ functions:
     params:
       working_dir: src
       script: |
-        if [ -s "$HOME/.rvm/scripts/rvm" ] ; then
-          export PATH="$PATH:$HOME/.rvm/bin"
-          bash -s source "$HOME/.rvm/scripts/rvm"
-        elif [ -s "/usr/local/rvm/scripts/rvm" ] ; then
-          export PATH="$PATH:/usr/local/rvm/bin"
-          bash -s source "/usr/local/rvm/scripts/rvm"
-        else
-          command curl -sSL https://rvm.io/mpapis.asc | gpg --import -
-          curl -sSL https://get.rvm.io | bash -s stable --auto-dotfiles
-          export PATH="$PATH:$HOME/.rvm/bin"
-          bash -s source "$HOME/.rvm/scripts/rvm"
-        fi
-        bash -l rvm install ruby-2.3.0
-        bash -l rvm use 2.3.0
-        bash -l gem install bundler
+        gem install bundler
         bash -l bundle install
         bash -l bundle exec rake clean
         bash -l bundle exec rake compile
