--- a/.evg.yml
+++ b/.evg.yml
@@ -4,6 +4,7 @@ functions:
     params:
       working_dir: src
       script: |
+        source ~/.rvm/scripts/rvm
         bash -l rvm install ruby-2.3.0
         bash -l rvm use 2.3.0
         bash -l gem install bundler
