--- a/.evg.yml
+++ b/.evg.yml
@@ -3,14 +3,16 @@ functions:
     command: shell.exec
     params:
       working_dir: src
+      shell: bash
       script: |
         source ~/.rvm/scripts/rvm
-        bash -l rvm install ruby-2.3.0
-        bash -l gem install bundler
-        bash -l bundle install
-        bash -l bundle exec rake clean
-        bash -l bundle exec rake compile
-        bash -l bundle exec rake spec
+        rvm install ruby-2.3.0
+        rvm use 2.3.0
+        gem install bundler
+        bundle install
+        bundle exec rake clean
+        bundle exec rake compile
+        bundle exec rake spec
 
 tasks:
   - name: 'build'
